@@ -3,8 +3,7 @@ package com.inninglog.inninglog.global.s3;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import software.amazon.awssdk.auth.credentials.AwsBasicCredentials;
-import software.amazon.awssdk.auth.credentials.StaticCredentialsProvider;
+import software.amazon.awssdk.auth.credentials.DefaultCredentialsProvider;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
@@ -23,60 +22,59 @@ public class S3Uploader {
     @Value("${cloud.aws.s3.bucket}")
     private String bucket;
 
-    @Value("${cloud.aws.credentials.access-key}")
-    private String accessKey;
+    // ✅ 오사카 리전
+    private final Region region = Region.AP_NORTHEAST_3;
 
-    @Value("${cloud.aws.credentials.secret-key}")
-    private String secretKey;
-
-    private final Region region = Region.AP_NORTHEAST_2;
-
+    /**
+     * Presigned PUT URL (업로드용)
+     */
     public String generatePresignedUrl(String key, String contentType) {
-        AwsBasicCredentials awsCredentials = AwsBasicCredentials.create(accessKey, secretKey);
-
-        S3Presigner presigner = S3Presigner.builder()
+        try (S3Presigner presigner = S3Presigner.builder()
                 .region(region)
-                .credentialsProvider(StaticCredentialsProvider.create(awsCredentials))
-                .build();
+                .credentialsProvider(DefaultCredentialsProvider.create()) // ✅ 키 대신 Role/환경변수 자동탐색
+                .build()) {
 
-        PutObjectRequest objectRequest = PutObjectRequest.builder()
-                .bucket(bucket)
-                .key(key)
-                .contentType(contentType)
-                .build();
+            PutObjectRequest putObjectRequest = PutObjectRequest.builder()
+                    .bucket(bucket)
+                    .key(key)
+                    .contentType(contentType)
+                    .build();
 
-        PutObjectPresignRequest presignRequest = PutObjectPresignRequest.builder()
-                .signatureDuration(Duration.ofMinutes(10))
-                .putObjectRequest(objectRequest)
-                .build();
+            PutObjectPresignRequest presignRequest = PutObjectPresignRequest.builder()
+                    .signatureDuration(Duration.ofMinutes(10))
+                    .putObjectRequest(putObjectRequest)
+                    .build();
 
-        PresignedPutObjectRequest presignedRequest = presigner.presignPutObject(presignRequest);
-        return presignedRequest.url().toString();
+            PresignedPutObjectRequest presignedRequest = presigner.presignPutObject(presignRequest);
+            return presignedRequest.url().toString();
+        }
     }
 
+    /**
+     * Presigned GET URL (다운로드용)
+     */
     public String generatePresignedGetUrl(String key) {
-        if (key == null || key.trim().isEmpty()) {
+        if (key == null || key.isBlank()) {
             return null;
         }
 
-        AwsBasicCredentials awsCredentials = AwsBasicCredentials.create(accessKey, secretKey);
-
-        S3Presigner presigner = S3Presigner.builder()
+        try (S3Presigner presigner = S3Presigner.builder()
                 .region(region)
-                .credentialsProvider(StaticCredentialsProvider.create(awsCredentials))
-                .build();
+                .credentialsProvider(DefaultCredentialsProvider.create()) // ✅ 자동 인증
+                .build()) {
 
-        GetObjectRequest getObjectRequest = GetObjectRequest.builder()
-                .bucket(bucket)
-                .key(key)
-                .build();
+            GetObjectRequest getObjectRequest = GetObjectRequest.builder()
+                    .bucket(bucket)
+                    .key(key)
+                    .build();
 
-        GetObjectPresignRequest presignRequest = GetObjectPresignRequest.builder()
-                .signatureDuration(Duration.ofMinutes(10))
-                .getObjectRequest(getObjectRequest)
-                .build();
+            GetObjectPresignRequest presignRequest = GetObjectPresignRequest.builder()
+                    .signatureDuration(Duration.ofMinutes(10))
+                    .getObjectRequest(getObjectRequest)
+                    .build();
 
-        PresignedGetObjectRequest presignedRequest = presigner.presignGetObject(presignRequest);
-        return presignedRequest.url().toString();
+            PresignedGetObjectRequest presignedRequest = presigner.presignGetObject(presignRequest);
+            return presignedRequest.url().toString();
+        }
     }
 }
